--- a/source/catalog.html
+++ b/source/catalog.html
@@ -24,13 +24,15 @@
       <!-- для демонстрации закрытого меню добавить класс main-nav--closed -->
       <nav class="main-nav">
         <ul class="site-list">
-          <li class="site-list__item site-list__item--current">
-            <a class="site-list__link site-list__link--current" href="#"
-              >Главная
-            </a>
+          <li class="site-list__item">
+            <a class="site-list__link" href="#">Главная </a>
           </li>
-          <li class="site-list__item site-list__item">
-            <a class="site-list__link" href="catalog.html">Фото и видео </a>
+          <li class="site-list__item site-list__item--current">
+            <a
+              class="site-list__link site-list__link--current"
+              href="catalog.html"
+              >Фото и видео
+            </a>
           </li>
           <li class="site-list__item site-list__item">
             <a class="site-list__link" href="form.html">Форма отзыва </a>
