каталог мобайл почти все

--- a/source/form.html
+++ b/source/form.html
@@ -21,7 +21,7 @@
 
       <!-- для демонстрации открытого меню добавить класс main-nav--opened -->
       <!-- для демонстрации закрытого меню добавить класс main-nav--closed -->
-      <nav class="main-nav">
+      <nav class="main-nav main-nav--opened">
         <ul class="site-list">
           <li class="site-list__item">
             <a class="site-list__link" href="#">Главная </a>
