--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,7 @@
   </head>
   <body class="page__body">
     <header class="main-header">
-      <a class="main-header__logo">
+      <a class="main-header__logo" href="index.html">
         <img
           class="main-header__logo-img"
           src="./img/logo_sedona.svg"
@@ -21,7 +21,7 @@
 
       <!-- для демонстрации открытого меню добавить класс main-nav--opened -->
       <!-- для демонстрации закрытого меню добавить класс main-nav--closed -->
-      <nav class="main-nav main-nav--opened">
+      <nav class="main-nav">
         <ul class="site-list">
           <li class="site-list__item">
             <a class="site-list__link" href="#">Главная </a>
